<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_dial_digist_1"
            style="@style/DialTextStyle"
            android:layout_weight="1"
            android:text="@string/digist_1"/>

        <Button
            android:id="@+id/btn_dial_digist_2"
            style="@style/DialTextStyle"
            android:layout_weight="1"
            android:text="@string/digist_2"/>

        <Button
            android:id="@+id/btn_dial_digist_3"
            style="@style/DialTextStyle"
            android:layout_weight="1"
            android:text="@string/digist_3"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_dial_digist_4"
            style="@style/DialTextStyle"
            android:layout_weight="1"
            android:text="@string/digist_4"/>

        <Button
            android:id="@+id/btn_dial_digist_5"
            style="@style/DialTextStyle"
            android:layout_weight="1"
            android:text="@string/digist_5"/>

        <Button
            android:id="@+id/btn_dial_digist_6"
            style="@style/DialTextStyle"
            android:layout_weight="1"
            android:text="@string/digist_6"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_dial_digist_7"
            style="@style/DialTextStyle"
            android:layout_weight="1"
            android:text="@string/digist_7"/>

        <Button
            android:id="@+id/btn_dial_digist_8"
            style="@style/DialTextStyle"
            android:layout_weight="1"
            android:text="@string/digist_8"/>

        <Button
            android:id="@+id/btn_dial_digist_9"
            style="@style/DialTextStyle"
            android:layout_weight="1"
            android:text="@string/digist_9"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_dial_digist_star"
            style="@style/DialTextStyle"
            android:layout_weight="1"
            android:text="@string/digist_star"/>

        <Button
            android:id="@+id/btn_dial_digist_0"
            style="@style/DialTextStyle"
            android:layout_weight="1"
            android:text="@string/digist_0"/>

        <Button
            android:id="@+id/btn_dial_digist_pound"
            style="@style/DialTextStyle"
            android:layout_weight="1"
            android:text="@string/digist_pound"
            android:textSize="28sp"/>

    </LinearLayout>

</LinearLayout>